docs-archive/apache-airflow-providers-amazon/9.38.0/_sources/_api/airflow/providers/amazon/aws/triggers/base/index.rst.txt
airflow.providers.amazon.aws.triggers.base
==========================================

.. py:module:: airflow.providers.amazon.aws.triggers.base


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger


Module Contents
---------------

.. py:class:: AwsBaseWaiterTrigger(*, serialized_fields, waiter_name, waiter_args, failure_message, status_message, status_queries, return_key = 'value', return_value, waiter_delay, waiter_max_attempts, waiter_config_overrides = None, aws_conn_id = 'aws_default', region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   Base class for all AWS Triggers that follow the "standard" model of just waiting on a waiter.

   Subclasses should set the ``aws_hook_class`` attribute to the hook they need. The hook is then
   built from the parameters this class already serializes, so the deferred half of a task talks to
   AWS with the same region, SSL verification setting and botocore configuration as the synchronous
   half. Subclasses whose hook takes something else may override :meth:`_hook_parameters` or, as a
   last resort, :meth:`hook` itself.

   :param serialized_fields: Fields that are specific to the subclass trigger and need to be serialized
       to be passed to the __init__ method on deserialization.
       The conn id, region, and waiter delay & attempts are always serialized.
       format: {<parameter_name>: <parameter_value>}

   :param waiter_name: The name of the (possibly custom) boto waiter to use.

   :param waiter_args: The arguments to pass to the waiter.
   :param failure_message: The message to log if a failure state is reached.
   :param status_message: The message logged when printing the status of the service.
   :param status_queries: A list containing the JMESPath queries to retrieve status information from
       the waiter response. See https://jmespath.org/tutorial.html

   :param return_key: The key to use for the return_value in the TriggerEvent this emits on success.
       Defaults to "value".
   :param return_value: A value that'll be returned in the return_key field of the TriggerEvent.
       Set to None if there is nothing to return.

   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param waiter_config_overrides: A dict to update waiter's default configuration. Only specified keys will
       be updated.
   :param aws_conn_id: The Airflow connection used for AWS credentials. To be used to build the hook.
   :param region_name: The AWS region where the resources to watch are. To be used to build the hook.
   :param verify: Whether or not to verify SSL certificates. To be used to build the hook.
       See: https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client.
       To be used to build the hook. For available key-values see:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class
      :type:  type[airflow.providers.amazon.aws.hooks.base_aws.AwsGenericHook]


   .. py:method:: __init_subclass__(**kwargs)
      :classmethod:


      Reject a subclass that cannot build a hook, at import time.

      ``hook()`` is only reached from ``run()``, which executes in the triggerer, so without this
      a subclass that declares neither would defer successfully and fail later, out of sight of
      the task that deferred. The operator side gets the same guarantee from
      ``AwsBaseHookMixin.validate_attributes``. This runs on class creation rather than in
      ``__init__`` because subclasses such as ``EksDeleteClusterTrigger`` never call
      ``super().__init__()``.



   .. py:attribute:: serialized_fields


   .. py:attribute:: waiter_name


   .. py:attribute:: waiter_args


   .. py:attribute:: failure_message


   .. py:attribute:: status_message


   .. py:attribute:: status_queries


   .. py:attribute:: waiter_config_overrides
      :value: None



   .. py:attribute:: return_key
      :value: 'value'



   .. py:attribute:: return_value


   .. py:attribute:: waiter_delay


   .. py:attribute:: attempts


   .. py:attribute:: aws_conn_id
      :value: 'aws_default'



   .. py:attribute:: region_name
      :value: None



   .. py:attribute:: verify
      :value: None



   .. py:attribute:: botocore_config
      :value: None



   .. py:method:: serialize()

      Return the information needed to reconstruct this Trigger.

      :return: Tuple of (class path, keyword arguments needed to re-instantiate).



   .. py:method:: hook()

      Build the hook this trigger waits with.



   .. py:method:: run()
      :async:


      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



